Correct fields for the form

--- a/home.html
+++ b/home.html
@@ -114,6 +114,10 @@
               <span class="input-group-addon">Password: </span>
               <input type="text" class="form-control input-lg" name="passWord" placeholder="jonsnow@knowsnothi.ng">
             </p>
+            <p class="input-group">
+            <span class="input-group-addon">Retype-Password: </span>
+            <input type="text" class="form-control input-lg" name="reTypepassWord" placeholder="jonsnow@knowsnothi.ng">
+                </p>
             <p class="help-block text-center">
               <small>
                 We won't send you spam. Unsubscribe at any time.
