--- a/signup.html
+++ b/signup.html
@@ -71,14 +71,14 @@
             Sign Up
           </h1>
           <h4> It's free ......</h4>
-          <form class="margin-base-vertical">
+          <form action="/register" method="post" class="margin-base-vertical">
             <p class="input-group">
               <span class="input-group-addon">First Name:&#32;&#32;&#32;&#32;&#32; </span>
-              <input type="text" class="form-control input-lg" name="firstName" placeholder="jonsnow@knowsnothi.ng">
+              <input type="text" class="form-control input-lg" name="firstname" placeholder="jonsnow@knowsnothi.ng">
             </p>
             <p class="input-group">
               <span class="input-group-addon">Last Name:&#32;&#32;&#32;&#32;&#32;&#32; </span>
-              <input type="text" class="form-control input-lg" name="lastName" placeholder="jonsnow@knowsnothi.ng">
+              <input type="text" class="form-control input-lg" name="lastname" placeholder="jonsnow@knowsnothi.ng">
             </p>
             <p class="input-group">
               <span class="input-group-addon">Email:&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32; </span>
@@ -86,15 +86,15 @@
             </p>
             <p class="input-group">
               <span class="input-group-addon">User Name:&#32;&#32;&#32;&#32;&#32;&#32; </span>
-              <input type="text" class="form-control input-lg" name="userName" placeholder="jonsnow@knowsnothi.ng">
+              <input type="text" class="form-control input-lg" name="username" placeholder="jonsnow@knowsnothi.ng">
             </p>
             <p class="input-group">
               <span class="input-group-addon">Password:&#32;&#32;&#32;&#32;&#32;&#32;&#32; </span>
-              <input type="text" class="form-control input-lg" name="passWord" placeholder="jonsnow@knowsnothi.ng">
+              <input type="password" class="form-control input-lg" name="password" placeholder="jonsnow@knowsnothi.ng">
             </p>
             <p class="input-group">
             <span class="input-group-addon">Retype-Password: </span>
-            <input type="text" class="form-control input-lg" name="reTypepassWord" placeholder="jonsnow@knowsnothi.ng">
+            <input type="password" class="form-control input-lg" name="secondPassword" placeholder="jonsnow@knowsnothi.ng">
                 </p>
             <p class="help-block text-center">
               <small>
