--- a/register.html
+++ b/register.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0043)http://getbootstrap.com/examples/jumbotron/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +6,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.png">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Learn With Me</title>
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
 
@@ -26,17 +25,14 @@
                     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
                                    <link rel="shortcut icon" href="../assets/ico/favicon.png">
                                    
-    <style type="text/css">
-
-        .spaceout{
-            padding: 20px !important;
-            margin: 20px !important;
-        }
+      <style>
+      html {
+        background: url("img/grey.png") repeat left top;
+      }
     </style>
   </head>
 
-  <body>
-
+  <body style="background: rgba(0,0,0,0);">
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -58,15 +54,25 @@
               <a href="dashboard.html">Dash Board</a>
             </li>
           </ul>
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">
+              Sign in
+            </button>
+          </form>
         </div>
-        <!-- /.nav-collapse -->
+        <!--/.nav-collapse -->
       </div>
-      <!-- /.container -->
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 panel panel-default">
+        <div class="col-md-6 col-md-offset-3 panel panel-default" style="background: #F5F5F5">
           <h1 class="margin-base-vertical">
             Sign Up
           </h1>
